# GTransPY

./: .gitignore  README.md  pyproject.toml
GTransPY/: __init__.py  detection.py  helpers.py  types.py  values.py
GTransPY/strongString/: values.py
GTransPY/trLang/: __init__.py  helpers.py
