[tool.poetry]
name = "GTransPY"
version = "0.0.12"
description = "An API Wrapper for Google translate"
authors = ["ALiwoto <aminnimaj@gmail.com>", "Sayan Biswas <sayan@pokurt.me>"]
license = "Unlicense License"
packages = [
    { include = "GTransPY" }
]
readme = "README.md"
keywords = ["translate", "google translate", "translator", "google", "api"]
homepage = "https://github.com/ALiwoto/GTransPY"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
